# client-testing

./: .gitignore  README.md  manage.py  pyproject.toml
clienttesting/: asgi.py  settings.py  urls.py  wsgi.py
jive_integration/: field_choices.py  models.py  publishers.py  serializers.py  urls.py  utils.py  views.py
jive_integration/jive_client/: client.py
jive_integration/migrations/: 0001_initial.py  0003_jivesubscriptioneventextract.py  0004_delete_jivecallpartial.py  0005_relate_jive_channel_to_extracts.py  0006_jiveawsrecordingbucket.py  0007_bucket_additional_fields.py  0008_additional_fields.py  0009_remove_unique_and_add_bucket_name_and_add_choices_to_events.py  0010_alter_jiveline_source_organization_jive_id.py  0011_audit_trail_models.py  0012_rename_jive_connection_to_jive_api_credentials.py  0013_jiveapicredentials_additional_fields.py  0014_rename_jive_connection_related_models.py  0015_recording_bucket_practice_telecom.py
tests/: login.py
tests/functional/: helpers.py
tests/test_api/: login_tests.py
